--- a/fkm-ota/mido/changelog.txt
+++ b/fkm-ota/mido/changelog.txt
@@ -1,16 +1,15 @@
-r16 - 01-06-2020 (GMT+7)
+r17 - 01-28-2020 (GMT+7)
 
-- Merge latest aosp/android-3.18 branch as per 20200105
-- Fix other old upstream issue for missing changes on aosp-3.18 (Thanks to @krasCGQ)
-- Apply ion/iommu optimizations from @Kerneltoast (Thanks to @ramadhanr124 & @Zile995)
-- MSM Thermal optimizations
-- Memcmp optimizations
-- Improve CPUSets Assist
-- Implement crypto NEON XOR accelerated + CRC32 performance
-- Disable other left debugfs drivers
-- Disable auditing on selinux
-- Disable backlight dimmer by default
-- Disable several audio tweaks features by default
-- Disable sched_boost tune on kernel features
-- Removed Boeffla Wakelock Blocker
+- Merge latest aosp/android-3.18 common branch as per 20200128
+- Revert several commit from aosp/android-3.18 to fix issue on A/V or failure compilation
+- Upstreamed AnyKernel3 (No need to reflash magisk on android 10 after flash kernel)
+- Switch to Proton clang version 10.0.0 (@kdrag0n)
+- Disable LLVM Polly optimizations
+- Merge more missing upstream changes (@krascgq)
+- Use proper fix for last workaround on wifi drivers (@krascgq)
+- Code cleanup for mido kernel specific changes (@krascgq)
+- Import Xiaomi Thermal changes and several msm thermal optimizations
+- Misc gpu optimizations (@kerneltoast)
+- Switch to 80Hz arbitrary tick rates (@tytydraco)
+- Several I/O optimizations (@tytydraco)
 - Other misc optimizations
